syntax = "proto3";

package proto.calculator;

option java_package = "com.yo.prototype";
option java_multiple_files = true;

message CalculatorRequest {
  int32 value1 = 1;
  int32 value2 = 2;
}

message CalculatorResponse {
  int32 result = 1;
}

message SingleInputRequest {
  int32 value = 1;
}

service CalculatorService {
  rpc add(CalculatorRequest) returns (CalculatorResponse) {};
  rpc subtract(CalculatorRequest) returns (CalculatorResponse) {};
  rpc multiply(CalculatorRequest) returns (CalculatorResponse) {};
  rpc primeDecompose(SingleInputRequest) returns (stream CalculatorResponse) {};
}